Finish animation for player choice buttons

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <div class="winnerAnnouncer"><p>Are you ready?</p></div>
         </div>
         <div class="playerChoice">
-            <div class="rock"><img src="img/rock.png" alt="a stylized rock"></div>
-            <div class="paper"><img src="img/paper.png" alt="a stylized paper"></div>
-            <div class="scissors"><img src="img/scissors.png" alt="a stylized scissors"></div>
+            <div><img src="img/rock.png" alt="a stylized rock" class="rock"></div>
+            <div><img src="img/paper2.png" alt="a stylized paper" class="paper"></div>
+            <div><img src="img/scissors.png" alt="a stylized scissors" class="scissors"></div>
         </div>
     </div>
     <div class="scoreContainer">
         <div class="userContainer">
             <h4>User</h4>
-            <div class="score">0</div>
+            <div class="userScore">0</div>
         </div>
         <div class="computerContainer">
             <h4>Computer</h4>
-            <div class="score">0</div>
+            <div class="computerScore">0</div>
         </div>
     </div>
     <script src="script.js"></script>
