Finish announcer text for winning, losing or drawing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="logo"></div>
     <div class="gameContainer">
-        <div class="roundsCounter"><p>5 rounds left</p></div>
+        <div class="enemy"><p>Angry A.I.</p></div>
         <div class="gameWindow">
             <div class="computerChoice">
                 <img src="img/angryFace.png" alt="an angry face" id="angryFace">
